# otus-cpp-developer-basic

./: .gitignore  README.md
module01Lesson02IHallo/: CMakeLists.txt  main  main.cpp  print.cpp
module01Lesson02IHallo2/: CMakeLists.txt  example.cpp  hello_world.cpp  move_me_out.cpp  move_me_out.h
module01Lesson06Linking/: CMakeLists.txt  guessnumber.cpp
module01Lesson06Linking/lib/: CMakeLists.txt  check_value.cpp  check_value.hpp  high_scores.cpp  high_scores.hpp  random_value.cpp  random_value.hpp
module02Lesson09PointersRefs/: main.cpp
module02Lesson10Classes/otus-physics-master/: Ball.cpp  Ball.hpp  Velocity.hpp  World.cpp
module02Lesson12inheritancePolymorphism/: mySimulatorSolution.cpp
module02Lesson13inheritancePolymorphism/: CMakeLists.txt  mySimulatorSolution.cpp  statistics.cpp
module02Lesson14overloadConstDestrMove/: CMakeLists.txt  myList.cpp  myList.hpp  myList.ipp  myVector.cpp  myVector.hpp  myVector.ipp
module02Lesson16googleTest/: CMakeLists.txt
module02Lesson16googleTest/googletest_installed/lib64/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
module02Lesson16googleTest/src/: myVector.ipp
module02Lesson16googleTest/test/: testList.cpp  testVector.cpp
module05Lesson29threads/crc32_crack/: CMakeLists.txt  CRC32.cpp  CRC32.hpp  IO.cpp  IO.hpp  main.cpp
module05Lesson29threads/testData/: zhiraf_forge.txt  zhiraf_origin.txt
module05Lesson34multiThreading2/: topk_words.cpp
module05Lesson34multiThreading2/data/: resultFinal.txt  resultOriginal.txt  voynaimir.txt
